--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ name = "imt"
 [dependencies]
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
+simplelog = "0.7"
 structopt = "0.3"
+test-case = "1.0"
 toml = "0.5"
 walkdir = "2"
