--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ name = "imt"
 [dependencies]
 anyhow = "1.0"
 log = "0.4"
+parking_lot = "0.10"
 serde = { version = "1.0", features = ["derive"] }
 simplelog = "0.7"
 structopt = "0.3"
